--- a/app/templates/new_treatment_page.html
+++ b/app/templates/new_treatment_page.html
@@ -85,6 +85,8 @@
                                                         <ul class="dropdown-menu dropdown-menu-end" id="languageDropdownMenu" aria-labelledby="languageSelectBtn">
                                                             <li><a class="dropdown-item lang-option" href="#" data-lang="en-GB">EN (UK)</a></li>
                                                             <li><a class="dropdown-item lang-option" href="#" data-lang="es-ES">ES (Spain)</a></li>
+                                                            <li><a class="dropdown-item lang-option" href="#" data-lang="fr-FR">FR (France)</a></li>
+                                                            <li><a class="dropdown-item lang-option" href="#" data-lang="it-IT">IT (Italy)</a></li>
                                                         </ul>
                                                     </div>
                                                     <span id="recordingStatus" class="text-muted small ms-2 align-self-center" style="display: none;"></span>
